--- a/src/styles/CadastroDoador/CadastroDoador.css
+++ b/src/styles/CadastroDoador/CadastroDoador.css
@@ -1,4 +1,4 @@
-@import url("../Colors/cores.css");
+@import url("../../colors/cores.css");
 
 body {
 
@@ -46,6 +46,14 @@ body {
 
 }
 
+.inputFormulario{
+
+    border: 1px solid;
+    border-radius: 5px;
+    padding-left: 5px;
+
+}
+
 #nome, #cpf, #contato{
 
     margin-left: 10px;
@@ -74,6 +82,42 @@ body {
 
     margin-left: 10px;
     margin-right: 30px;
+    margin-bottom: 10px;
+
+}
+
+.div_botoes{
+
+    text-align: center;
     margin-bottom: 20px;
+
+}
+
+#cadastrar{
+
+    width: 100px;
+    height: 30px;
+    color: var(--branco);
+    background-color: var(--verde);
+    border: 0px;
+    border-radius: 10px;
+
+}
+
+#limpar{
+
+    width: 100px;
+    height: 30px;
+    color: var(--branco);
+    background-color: var(--vermelho);
+    border: 0px;
+    border-radius: 10px;
+    margin-left: 10px;
+
+}
+
+#cadastrar:hover, #limpar:hover{
+
+    opacity: 0.7;
 
 }
