--- a/src/styles/CadastroDoador.css
+++ b/src/styles/CadastroDoador.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     display: flex;
     height: 100vh;
-    overflow: hidden
+    /* overflow: hidden; */
 }
 
 .ImagemHospital {
