--- a/src/styles/CadastroDoador.css
+++ b/src/styles/CadastroDoador.css
@@ -5,22 +5,23 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    height: 100vh;
+    /* height: 50%; */
+    /* width: 100%; */
     overflow: hidden;
 }
 
 .ImagemHospital {
 
-    width: auto;
+    width: 50vw
 
 }
 
 .area_cadastro {
 
     background-color: var(--azulpastel);
-    display: flex;
-    align-items: center;
-    width: 100vh;
+    width: 30vw;
+    padding-left: 10vw;
+    padding-top: 10vw;
 
 }
 
@@ -29,77 +30,77 @@ body {
     background-color: var(--branco);
     border: 1px solid;
     border-radius: 10%;
-    margin: auto;
+    width: 25vw;
 
 }
 
 .titulo_formulario {
 
-    margin: 20px;
+    margin: 2vh;
 
 }
 
 .labelFormulario {
 
-    margin: 10px;
+    margin-left: 1vw;
 
 }
 
 .inputFormulario {
 
     border: 1px solid;
-    border-radius: 5px;
-    padding-left: 5px;
+    border-radius: 1vw;
+    padding-left: 10px;
 
 }
 
-#nome,
-#cpf,
 #contato {
 
-    margin-left: 10px;
+    width: 25vh;
 
 }
 
-#nome,
 #cpf {
 
-    margin-bottom: 10px;
+    width: 25vh;
 
 }
 
 #nome {
 
-    width: 40vh;
+    width: 35vh;
 
 }
 
 .opcao {
 
     display: flex;
+    margin-bottom: 1vw;
 
 }
 
-.opcao_tipo,
+.opcao_tipo{
+
+    margin-left: 1vw;
+
+}
 .opcao_rh {
 
-    margin-left: 10px;
-    margin-right: 30px;
-    margin-bottom: 10px;
+    margin-left: 5vw;
 
 }
 
 .div_botoes {
 
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
 
 }
 
 #cadastrar {
 
-    width: 100px;
-    height: 30px;
+    width: 7vw;
+    height: 5vh;
     color: var(--branco);
     background-color: var(--verde);
     border: 0px;
@@ -109,8 +110,8 @@ body {
 
 #limpar {
 
-    width: 100px;
-    height: 30px;
+    width: 7vw;
+    height: 5vh;
     color: var(--branco);
     background-color: var(--vermelho);
     border: 0px;
