--- a/src/styles/CadastroDoador.css
+++ b/src/styles/CadastroDoador.css
@@ -4,24 +4,13 @@ body {
 
     margin: 0;
     padding: 0;
-    display: flex;
-    /* height: 50%; */
-    /* width: 100%; */
-    overflow: hidden;
-}
-
-.ImagemHospital {
-
-    width: 50vw
 
 }
 
 .area_cadastro {
 
+    margin-top: 20vh;
     background-color: var(--azulpastel);
-    width: 30vw;
-    padding-left: 10vw;
-    padding-top: 10vw;
 
 }
 
@@ -30,13 +19,14 @@ body {
     background-color: var(--branco);
     border: 1px solid;
     border-radius: 10%;
-    width: 25vw;
+    width: 350px;
 
 }
 
 .titulo_formulario {
 
     margin: 2vh;
+    margin-left: 60px;
 
 }
 
