FIX Erro de cadastrar e ele mostrar os elementos no URL

--- a/src/styles/DoadorDoacao.css
+++ b/src/styles/DoadorDoacao.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     display: flex;
     flex-direction: column;
 }
@@ -6,4 +6,4 @@ body {
 div {
     margin-bottom: 20px;
 }
-
+ */
